--- a/src/styles/SectionScroll.css
+++ b/src/styles/SectionScroll.css
@@ -15,28 +15,35 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: .2rem;
+    gap: .5rem;
     margin: auto;
     transform: translateX(calc(100dvw * var(--active-section)));
 }
 
 .section-button-wrapper {
-    text-align: center;
-    align-items: center;
     display: flex;
-    align-items: center;
     text-align: center;
+    align-items: center;
 }
 
 .section-button {
-    border-radius: 100%;
+    display: flex;
+    align-items: center;
     text-align: center;
-    width: 40px;
-    height: 40px;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
     padding: 0;
     background-color: transparent;
-    transform: translateY(-3px);
+    
 }
+
+.section-button:disabled img{
+    cursor: default;
+    opacity: 0;
+    transition: all .2s linear;
+}
+
 
 .markers-wrapper {
     display: flex;
@@ -68,4 +75,10 @@
 .active span{
     width: 15px;
     height: 15px;
+}
+
+button img {
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
 }
