--- a/src/styles/InterestCard.css
+++ b/src/styles/InterestCard.css
@@ -1,7 +1,7 @@
 .interest-wrapper {
     display: flex;
     flex-direction: column;
-    /* background-color: aliceblue; */
+    /* background-color: #292626c7; */
     /* color: #4f4f4f; */
     width: 300px;
     overflow: hidden;
@@ -12,10 +12,12 @@
     display: flex;
     align-items: center;
     padding: 1rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
 }
 
 .interest-image-wrapper {
-    clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
+    /* clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%); */
     height: 250px;
 }   
 
