--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -20,14 +20,23 @@ main {
     transform: translateX(calc(-100dvw * var(--active-section)));
 }
 
+.home,
+.about-me,
+.contact {
+    opacity: 0;
+    
+}
+
+/* Home section */
+
 .home {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    min-width: 100dvw;
+    width: 100dvw;
     height: 100dvh;
-    padding: 0rem 20rem;
+    padding: 0rem 5%;
     gap: 2.5rem;
     z-index: 1;
 }
@@ -49,40 +58,11 @@ main {
     width: 100%;
     height: 100%;
     background: rgb(21,23,27);
-    background: linear-gradient(0deg, rgba(21,23,27,1) 0%, rgba(9,9,121,1) 38%, rgba(0,97,212,1) 100%);
+    background: linear-gradient(90deg, rgba(21,23,27,1) 0%, rgba(9,9,121,1) 38%, rgba(0,97,212,1) 100%);
     z-index: -1;
     opacity: 0.2;
-}
-
-.aboutme-section-background {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgb(21,23,27);
-    background: linear-gradient(0deg, rgba(21,23,27,1) 0%, rgba(100,34,115,1) 38%, rgba(212,0,193,1) 100%);
-    z-index: -2;
-    opacity: 0.2;
-}
-
-.contact-section-background {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgb(21,23,27);
-    background: linear-gradient(180deg, rgba(21,23,27,1) 0%, rgba(87,36,135,1) 38%, rgba(157,0,254,1) 100%);
-    z-index: -3;
-    opacity: 0.2;
-}
-
-.home,
-.about-me,
-.contact {
-    opacity: 0;
-    
-}
-
-.home-image {
-    
+    background-size: 300% 100%;
+    animation: gradient-rotation 3s alternate infinite;
 }
 
 .channel-icon {
@@ -90,7 +70,8 @@ main {
     width: 400px;
     border-radius: 50%;
     object-fit: cover;
-    animation: border-opacity 1.5s 1s alternate-reverse infinite;
+    animation: border-opacity 3s alternate infinite;
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
 }
 
 @keyframes border-opacity {
@@ -102,18 +83,33 @@ main {
     }
 }
 
+/* About Me Section*/
+
+.aboutme-section-background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgb(21,23,27);
+    background: linear-gradient(90deg, rgba(21,23,27,1) 0%, rgba(100,34,115,1) 38%, rgba(212,0,193,1) 100%);
+    z-index: -2;
+    opacity: 0.2;
+    background-size: 300% 100%;
+    animation: gradient-rotation 3s alternate infinite;
+}
+
+
+
 .about-me {
     display: flex;
     justify-content: center;
-    min-width: 100dvw;
-    height: 90dvh;
+    width: 100vw;
+    height: 100dvh;
     align-items: center;
 }
 
 .main-aboutme {
     display: flex;
-    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-    grid-row: 200px;
+    width: 80%;
     flex-direction: column;
     gap: 2rem;
     padding: 2rem;
@@ -128,24 +124,28 @@ main {
 .interests-list {
     display: flex;
     gap: 2rem;
+    height: 100%;
 }
 
-/* .first {
-    grid-area: 1 / 1 / 2 / 3;
-}
 
-.second {
-    grid-area: 2 / 2 / 3 / 4;
-}
-
-.third {
-    grid-area: 3 / 3 / 4 / 5;
-} */
+/* Contact Section */
 
 .contact {
     display: flex;
     min-width: 100dvw;
     height: 100dvh;
+}
+
+.contact-section-background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgb(21,23,27);
+    background: linear-gradient(90deg, rgba(21,23,27,1) 0%, rgba(87,36,135,1) 38%, rgba(157,0,254,1) 100%);
+    z-index: -3;
+    opacity: 0.2;
+    background-size: 300% 100%;
+    animation: gradient-rotation 3s alternate infinite;
 }
 
 .main-contact {
@@ -169,11 +169,6 @@ main {
     gap: 1rem;
 }
 
-.show {
-    transition: all 2s ease;
-    opacity: 1;
-}
-
 .social-icon {
     width: 4rem;
     height: 4rem;
@@ -182,4 +177,128 @@ main {
 .social-icon:hover {
     cursor: pointer;
     scale: 1.2;
+}
+
+/* General */
+
+.show {
+    transition: opacity 2s ease;
+    opacity: 1;
+}
+
+.hidden {
+    
+}
+
+@keyframes gradient-rotation {
+    0% {
+        background-position: 100% 0%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@media (max-width: 1400px) {
+    .home-info-wrapper {
+        flex-direction: column-reverse;
+    }
+
+    .home-image {
+        height: auto;
+    }
+
+    .channel-icon {
+        height: auto;
+        width: 40%;
+    }
+
+    .home-text {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 1100px) {
+    .home {
+        width: 100vw;
+        min-width: 500px;
+    }
+
+    .interests-list {
+        /* flex-direction: column; */
+    }
+
+}
+
+@media (max-width: 900px) {
+    .interests-list {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .main-aboutme {
+        gap: 0;
+        width: 100%;
+        padding: 0;
+    }
+
+    .interest-wrapper {
+        overflow-y: auto;
+        
+    }
+
+    .interest-text {
+        font-size: .8rem;
+        overflow-y: auto;
+        scrollbar-width: none;
+    }
+
+}
+
+@media (max-width: 800px) {
+    .home, .about-me, .contact {
+        opacity: 1;
+        min-height: 100dvh;
+    }
+
+    .about-me {
+        height: auto;
+    }
+
+    .interests-list {
+        flex-direction: column;
+    }
+
+    .interest-wrapper {
+        width: 90%;
+        height: 200px;
+    }
+
+    .interest-image-wrapper {
+        min-height: 30px;
+    }
+
+    .interest-image {
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .interest-text {
+        flex: 3;
+        overflow: auto;
+        font-size: 100%;
+    }
+
+    .main-content {
+        flex-direction: column;
+        transform: translateY(calc(100dvh * 0));
+    }
+
+    .interest-wrapper  {
+        width: 100%;
+    }
+
+    .scroll-wrapper {
+        display: none;
+    }
 }
