--- a/src/styles/InterestCard.css
+++ b/src/styles/InterestCard.css
@@ -1,28 +1,41 @@
+* {
+    box-sizing: border-box;
+}
+
 .interest-wrapper {
     display: flex;
     flex-direction: column;
-    /* background-color: #292626c7; */
-    /* color: #4f4f4f; */
-    width: 300px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     overflow: hidden;
-    /* clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%); */
+    background-color: aliceblue;
+    color: black;
+    padding: 1rem;
 }
 
 .interest-text {
     display: flex;
-    align-items: center;
-    padding: 1rem;
+    flex: 3;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
 }
 
 .interest-image-wrapper {
     /* clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%); */
-    height: 250px;
+    display: flex;
+    align-items: center;
+    min-height: 100px;
+    max-width: 100px;
+    flex: 1;
 }   
 
 .interest-image {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+    width: 50px;
+    height: 50px;
+}
+
+.interest-image svg {
+    width: 50px;
+    height: 50px;
 }
