--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -256,6 +256,11 @@ main {
 }
 
 @media (max-width: 800px) {
+
+    body {
+        overflow-x: hidden;
+    }
+    
     .home, .about-me, .contact {
         opacity: 1;
         min-height: 100dvh;
