--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-image: url('./assets/background.jpg');
+  overflow-y: hidden;
 }
 
 h1 {
