--- a/src/styles/VerticalSwapButton.css
+++ b/src/styles/VerticalSwapButton.css
@@ -2,6 +2,7 @@
     position: absolute;
     bottom: 10px;
     display: none;
+    z-index: 9999;
     width: 50px;
     height: 50px;
 }
@@ -11,6 +12,8 @@
     top: 100px;
     z-index: 9999;
     display: none;
+    width: 50px;
+    height: 50px;
 }
 
 .vertical-swap-button {
