--- a/src/styles/InterestCard.css
+++ b/src/styles/InterestCard.css
@@ -3,6 +3,7 @@
 }
 
 .interest-wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,6 +13,44 @@
     background-color: aliceblue;
     color: black;
     padding: 1rem;
+    opacity: 0;
+    border-radius: 8px;
+    box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
+    -webkit-box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
+    -moz-box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
+    animation: boxShadowPulse 3s alternate infinite;
+}
+
+@keyframes boxShadowPulse {
+    0% {
+        box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
+-webkit-box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
+-moz-box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
+    }
+    100% {
+        box-shadow: 7px 5px 20px -7px rgba(255,255,255,0);
+-webkit-box-shadow: 7px 5px 20px -7px rgba(255,255,255,0);
+-moz-box-shadow: 7px 5px 20px -7px rgba(255,255,255,0);
+    }
+}
+
+
+.interest-wrapper.visible.first {
+    transition: opacity 1s ease;
+    transition-delay: 0.5s;
+    opacity: 1;
+}
+
+.interest-wrapper.visible.second {
+    transition: opacity 1s ease;
+    transition-delay: 1s;
+    opacity: 1;
+}
+
+.interest-wrapper.visible.third {
+    transition: opacity 1s ease;
+    transition-delay: 1.5s;
+    opacity: 1;
 }
 
 .interest-text {
