--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -53,6 +53,15 @@ main {
     color: rgb(255, 255, 255);
 }
 
+.home-text-greeting {
+    font-size: 3rem;
+}
+
+.home-text-names {
+    font-size: 3rem;
+    color: rgb(246, 156, 29);
+}
+
 .home-section-background {
     position: absolute;
     width: 100%;
@@ -380,6 +389,21 @@ main {
 
     .home-text {
         font-size: 1rem;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .home-text-greeting {
+        font-size: 2rem;
+    }
+
+    .home-text-names  {
+        font-size: 2rem;
+        display: flex;
+        min-height: 150px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
 
     .main-content {
@@ -399,7 +423,7 @@ main {
     .home-info-wrapper {
         justify-content: flex-end;
         /* height: 80%; */
-        width: 50%;
+        
     }
 
     .home-text {
@@ -447,5 +471,23 @@ main {
         100% {
             opacity: 1;
         }
+    }
+ }
+
+ @media (max-width: 200px) { 
+    .home-info-wrapper {
+        min-width: 200px;
+    }
+
+    .home-text-greeting {
+        font-size: 1rem;
+    }
+
+    .home-text-names {
+        font-size: 1rem;
+    }
+
+    .home-text p{
+        font-size: .8rem;
     }
  }
