--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -167,6 +167,10 @@ main {
     font-size: 3rem;
 }
 
+.about-me-title div span{
+    font-size: 4rem;
+}
+
 .interests-list {
     display: flex;
     gap: 2rem;
@@ -400,7 +404,6 @@ main {
     .home-text-names  {
         font-size: 2rem;
         display: flex;
-        min-height: 150px;
         align-items: center;
         justify-content: center;
         text-align: center;
@@ -409,6 +412,10 @@ main {
     .main-content {
         flex-direction: column;
         transform: translateY(calc(-100dvh * var(--active-section)));
+    }
+
+    .lumber-jack-container iframe {
+        width: 100%;
     }
 }
 
@@ -453,6 +460,10 @@ main {
     header select option{
         font-size: 1rem;
     }
+
+    .about-me-title div span{
+        font-size: 2rem;
+    }
     
 }
 
@@ -462,6 +473,10 @@ main {
     }
     .social-wrapper {
         flex-direction: column;
+    }
+
+    .home-text-names {
+        min-height: 100px;
     }
 
     @keyframes youtube-translate {
@@ -485,9 +500,83 @@ main {
 
     .home-text-names {
         font-size: 1rem;
+        min-height: auto;
     }
 
     .home-text p{
         font-size: .8rem;
     }
+
+    .about-me-title div span{
+        font-size: 1rem;
+    }
+ }
+
+ /* .lumber-inactive {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    animation: lumber-out 1.5s alternate forwards;
+ } */
+
+.lumber-jack-container {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: top 1s ease;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 99999;
+    transition: opacity 0.5s ease;
+}
+
+ .lumber-active {
+    top: 0;
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0s;
+ }
+
+ .lumber-inactive {
+    top: -100vh;
+    opacity: 0;
+    visibility: hidden;
+ }
+
+ @keyframes lumber-in {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
+ }
+
+.lumber-jack-container iframe{
+    /* width="600" height="400" frameBorder="0" */
+    width: 600px;
+    height: 100vh;
+    position: relative;
+}
+
+ .close-lumber {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 600;
+    top: 1rem;
+    width: 30px;
+    height: 30px;
+    background-color: black;
+    border-radius: 50%;
+    cursor: pointer;
+ }
+ .close-lumber:hover {
+    background-color: rgb(39, 38, 38);
  }
