--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -223,11 +223,26 @@ main {
 .social-icon {
     width: 4rem;
     height: 4rem;
+    position: relative;
+    overflow: hidden;
+    position: relative;
+    z-index: 1; /* Asegura que el ícono SVG esté sobre el gradiente */
+    width: 100%;
+    height: 100%;
+    transition: filter 0.3s ease;
 }
 
-.social-icon:hover {
+.social-icon-wrapper {
+    position: relative;
+    overflow: hidden;
+    width: 60px;
+    height: 60px;
+}
+
+.social-icon-wrapper:hover {
     cursor: pointer;
     scale: 1.2;
+    animation: beat-effect .5s alternate infinite;
 }
 
 .contact.show .social-icon.git {
@@ -241,6 +256,20 @@ main {
 .contact.show .social-icon.ig {
     animation: instagram-translate 1.5s alternate forwards;
 }
+
+.social-icon-wrapper img {
+    position: relative;
+    z-index: 1;
+}
+
+@keyframes beat-effect {
+    0% {
+      scale: 1;
+    }
+    100% {
+      scale: 1.3;
+    }
+  }
 
 @keyframes git-translate {
     0% {
@@ -320,6 +349,7 @@ main {
     .interests-list {
         flex-direction: column;
         gap: 1rem;
+        padding: 1rem;
     }
 
     .main-aboutme {
@@ -329,14 +359,12 @@ main {
     }
 
     .interest-wrapper {
-        overflow-y: auto;
-        
+        width: 100%;
+        height: 200px;
     }
 
     .interest-text {
-        font-size: .8rem;
-        overflow-y: auto;
-        scrollbar-width: none;
+        font-size: .8rem;;
     }
 
 }
@@ -376,7 +404,6 @@ main {
 
     .interest-text {
         flex: 3;
-        overflow: auto;
         font-size: 100%;
     }
 
