--- a/src/styles/InterestCard.css
+++ b/src/styles/InterestCard.css
@@ -10,27 +10,48 @@
     justify-content: center;
     width: 100%;
     overflow: hidden;
-    background-color: aliceblue;
-    color: black;
-    padding: 1rem;
+    background: aliceblue;
+    color: white;
+    /* padding: 1rem; */
     opacity: 0;
     border-radius: 8px;
-    box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
-    -webkit-box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
-    -moz-box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
+    box-shadow: 8px 10px 19px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 8px 10px 19px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 8px 10px 19px 0px rgba(0,0,0,0.75);
     animation: boxShadowPulse 3s alternate infinite;
+    background-color: rgba(0, 0, 0, 0.193);
+    gap: 1rem;
+    scrollbar-width: thin;
+    scrollbar-width: #888 #eeeeee00;
 }
+
+.interest-text p::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .interest-text p::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+  }
+
+  .interest-text p::-webkit-scrollbar-track {
+    background: #eeeeee00;
+  }
+
+  .interest-text p::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
 
 @keyframes boxShadowPulse {
     0% {
-        box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
--webkit-box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
--moz-box-shadow: 7px 5px 20px -7px rgba(255,255,255,1);
+        box-shadow: 8px 10px 19px 0px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 8px 10px 19px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 8px 10px 19px 0px rgba(0,0,0,0.75);
     }
     100% {
-        box-shadow: 7px 5px 20px -7px rgba(255,255,255,0);
--webkit-box-shadow: 7px 5px 20px -7px rgba(255,255,255,0);
--moz-box-shadow: 7px 5px 20px -7px rgba(255,255,255,0);
+        box-shadow: 8px 10px 19px 0px rgba(0,0,0,0.2);
+        -webkit-box-shadow: 8px 10px 19px 0px rgba(0,0,0,.2);
+        -moz-box-shadow: 8px 10px 19px 0px rgba(0,0,0,.2);
     }
 }
 
@@ -58,14 +79,22 @@
     flex: 3;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
+    height: 100%;
+    min-height: 330px;
+}
+
+.interest-text p {
+    text-align: center;
+    overflow: auto;
+    height: 100%;
 }
 
 .interest-image-wrapper {
     /* clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%); */
     display: flex;
     align-items: center;
-    min-height: 100px;
-    max-width: 100px;
+    /* min-height: 100px;
+    max-width: 100px; */
     flex: 1;
 }   
 
@@ -77,4 +106,30 @@
 .interest-image svg {
     width: 50px;
     height: 50px;
+}
+
+.interest-image-dager {
+    width: 100%;
+    height: auto;
+    min-height: 150px;
+    object-fit: cover;
+}
+@media (max-width: 900px) {
+    .interest-wrapper {
+        flex-direction: row;
+    }
+
+    .interest-image-wrapper {
+        height: 100%;
+    }
+
+    .interest-image-dager {
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .interest-text {
+        align-items: center;
+        min-height: auto;
+    }
 }
